--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Vous avez un site web
-	qui a besoin d'une nouvelle identité visuelle ou que vous partiez de zéro,
-	laissez l'agence web design la panthère située à Lyon vous réaliser un design
-	 dont vous serez fier et qui représentera votre entreprise">
+    <meta name="description" content="La confiance par l'expertise, trouver du sens à votre raison d'être.
+	Conseil, site web sur mesure visibilité, stratégie, expertise. Réponse Adaptée.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
