--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" width="217" /></a>
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" >
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
@@ -36,9 +38,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-					</li>
-					<li>
-						<a href="page2.html">Contact &gt;</a>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -110,8 +110,13 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img src="img/webP/citation.webp" alt="citation" style="height: 100%; width: 100%;"  />
-
+				<p class="citation">
+					"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise
+					et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."
+				</p>
+				<p class="autor">
+					Maxime Guibard, PDG de À vos fourchettes
+				</p>
 			</div>
 		</div>
 	</div>
@@ -140,7 +145,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="deuxieme titre" src="img/title2.png" style="height: 99px; width: 476px;" />
+				<h2>
+					Nous travaillons avec beaucoup de clients, <br>
+					voici nos réalisations.
+				</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -213,22 +221,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" aria-label="Twitter" target="_blank" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Facebook" href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" aria-label="Facebook" target="_blank" href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Dribbble" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" aria-label="Dribbble" target="_blank" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" aria-label="instagram" target="_blank" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
