--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     <title>Contact</title>
 
@@ -39,6 +39,9 @@
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
+					</li>
+					<li>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -72,28 +75,28 @@
 			<div class="col-sm-6">
 				<form id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
-						<label>
+						<label for="name">
 							Nom
 							<input id="name" class="form-control" required />
 						</label>
 		
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="email">
 							Adresse email
 							<input id="email" class="form-control" type="email" required />
 						</label>
 						
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="input_504">
 							Comment nous avez-vous connu ?
 							<input class="form-control" type="email" required id="input_504" />
 						</label>
 						
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 							<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 						</label>
@@ -105,7 +108,7 @@
 			</div>
 			<div class="col-sm-6">
 				<p>
-					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+					<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a><br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
 			</div>
 		</div>
@@ -129,22 +132,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" aria-label="Twitter" target="_blank" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Facebook" href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" aria-label="Facebook" target="_blank" href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Dribbble" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" aria-label="Dribbble" target="_blank" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" aria-label="instagram" target="_blank" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
