--- a/page2.html
+++ b/page2.html
@@ -2,12 +2,13 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
     <meta name="description" content="La confiance par l'expertise, trouver du sens à votre raison d'être.
 	Conseil, site web sur mesure visibilité, stratégie, expertise. Réponse Adaptée.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
+	<link rel="preload" href="style.css" as="style">
+
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
@@ -160,11 +161,11 @@
 </div>
 <!-- Principal conteneur END -->
  
-<script src="./js/jquery-2.1.0.min.js"></script>
-<script src="./js/bootstrap.min.js"></script>
-<script src="./js/blocs.min.js"></script>
-<script src="./js/jqBootstrapValidation.js"></script>
-<script src="./js/formHandler.js"></script>
+<script src="./js/jquery-2.1.0.js" defer></script>
+<script src="./js/bootstrap.js" defer></script>
+<script src="./js/blocs.js" defer></script>
+<script src="./js/jqBootstrapValidation.js" defer></script>
+<script src="./js/formHandler.js" defer></script>
 
 </body>
 </html>
